; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_GdipGraphicsSetAbort.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_GdipGraphicsSetAbort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hwnd = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@InvalidParameter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_GdipGraphicsSetAbort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_GdipGraphicsSetAbort() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @hwnd, align 4
  %5 = call i32 @GetDC(i32 %4)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @GdipCreateFromHDC(i32 %6, i32** %3)
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* @Ok, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @expect(i32 %8, i32 %9)
  %11 = call i32 @pGdipGraphicsSetAbort(i32* null, i32* null)
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* @InvalidParameter, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @expect(i32 %12, i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @pGdipGraphicsSetAbort(i32* %15, i32* null)
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* @Ok, align 4
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @expect(i32 %17, i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @GdipDeleteGraphics(i32* %20)
  %22 = load i32, i32* @hwnd, align 4
  %23 = load i32, i32* %1, align 4
  %24 = call i32 @ReleaseDC(i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @GetDC(i32) #1

declare dso_local i32 @GdipCreateFromHDC(i32, i32**) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @pGdipGraphicsSetAbort(i32*, i32*) #1

declare dso_local i32 @GdipDeleteGraphics(i32*) #1

declare dso_local i32 @ReleaseDC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
